0.vantyc.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kaniko
  namespace: vantyc
spec:
  containers:
  - name: kaniko
    image: gcr.io/kaniko-project/executor:debug
    ports:
    - containerPort: 80
    imagePullPolicy: Always
    args:
      - "--destination=gitlab.com/vantyc/van-registry"
    volumeMounts:
      - name: docker-cfg
        mountPath: /kaniko/.docker
  volumes:
  - name: docker-cfg
    projected:
      sources:
      - secret:
          name: docker-credentials
          items:
            - key: .dockerconfigjson
              path: config.json
