3.vantyc.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: vantyc
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      imagePullSecrets:
      - name: gitlab-registry-credentials
      containers:
      - image: registry.gitlab.com/vantyc/van-registry/vantyc:56
        name: nginx
        ports:
        - containerPort: 80
