4.vantyc.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vantyc-svc
  namespace: vantyc
  labels:
    app: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
